Styling fix for skills overflow. Forms now set to 100% height.

--- a/scss/components/_editor.scss
+++ b/scss/components/_editor.scss
@@ -123,6 +123,7 @@ span.dietype {
   overflow: auto;
   height: 100%;
   width: 100%;
+  min-height: 2rem;
 }
 
 .popout-editor-window {
@@ -139,6 +140,7 @@ span.dietype {
 .editor {
   width: 100%;
   height: 100%;
+  min-height: 2rem;
 }
 
 .tox.tox-tinymce {
