--- a/scss/components/_forcepowers.scss
+++ b/scss/components/_forcepowers.scss
@@ -37,6 +37,6 @@
   }
 
   .sheet-body {
-    height: calc(100% - 10em);
+    height: calc(100% - 10rem);
   }
 }
