--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -1,3 +1,7 @@
+form {
+  height: 100%;
+}
+
 .item-form {
   font-family: $font-primary;
 }
