--- a/scss/components/_specializations.scss
+++ b/scss/components/_specializations.scss
@@ -3,6 +3,6 @@
   min-height: 600px;
 
   .sheet-body {
-    height: calc(100% - 10em);
+    height: calc(100% - 9rem);
   }
 }
